# mle-training

./: .flake8  .gitignore  README.md  env.yml  nonstandardcode.py  pyproject.toml  settings.json  setup.py
.github/workflows/: build.yml  ci.yml  deploy.yml
docs/source/: conf.py  index.rst  ml_package.rst  modules.rst
src/ml_package/: __init__.py  data_ingestion.py  data_preprocessing.py  houseprice_predictor.ipynb  learningcode.py  main.py  nonstandardcode.py  scoring.py  training.py
src/ml_package/config/: logging_config.py
src/ml_package/scripts/: ingest_data.py  preprocess_data.py  score.py
tests/: test_nonstandardcode.py
tests/mlruns/0/: meta.yaml
tests/mlruns/0/54b3e160264547fc973bc508b69f78af/: meta.yaml
tests/mlruns/0/54b3e160264547fc973bc508b69f78af/metrics/: columns  linear_regression_rmse  rows
tests/mlruns/0/54b3e160264547fc973bc508b69f78af/params/: housing_path
tests/mlruns/0/54b3e160264547fc973bc508b69f78af/tags/: mlflow.runName  mlflow.source.name
